migrations applied and backend running

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - mysqldatabase
+      - 'mysqldatabase'
     env_file:
       - backend/.env
   ng:
