--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,31 +1,12 @@
 FROM python:3.6
 
-# Create app directory
-RUN mkdir -p /home/backend
-RUN apt-get update \
-    && apt-get -y install nano
-# Cleanup after apt-get commands
-RUN apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-    /var/cache/apt/archives/*.deb /var/cache/apt/*cache.bin
-# Activate WORKING DIR
-WORKDIR /home/backend
-# Copying requirements
-COPY requirements.txt /tmp/requirements.txt
-# Install the app dependencies
-# ToDo Refactor requirements
-RUN pip install mysqlclient
-RUN pip install -r /tmp/requirements.txt
-# Envs
+RUN mkdir /app
+WORKDIR /app
 
-# ADD the source code and entry point into the container
-ADD . /home/backend
-#ADD entrypoint.sh /home/backend/app/entrypoint.sh
-# Making entry point executable
-#RUN chmod +x entrypoint.sh
-# Exposing port
-EXPOSE 8080
-# Entry point and CMD
-#ENTRYPOINT ["/home/backend/app/entrypoint.sh"]
+COPY requirements.txt /app/requirements.txt
 
+RUN pip install -r requirements.txt
 
+COPY . /app
+
+CMD python manage.py runserver 0.0.0.0:8000
