--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,34 @@
 version: '3'
 services:
   mysqldatabase:
-    image: mysql:5.7
+    image: mysql:5.7.22
+    restart: always
     ports:
-      - "3306:3306"
+      - "33066:3306"
     env_file:
       - db.env
+    volumes:
+      - .dbdata:/var/lib/mysql
 
   backend:
     stdin_open: true
     build:
       context: ./backend
       dockerfile: Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
     depends_on:
       - 'mysqldatabase'
     env_file:
       - backend/.env
+    volumes:
+      - ./backend:/app
+
   ng:
+    stdin_open: true
     container_name: ng
     build:
-      context: angular
-      dockerfile: Dockerfile
-    ports:
-      - "8080:80"
-volumes:
-  practice-database-data: # named volumes can be managed easier using docker-compose
+      context: frontend
+      dockerfile:  Dockerfile
+    volumes:
+    - ./frontend:/web
